# tl_sdk

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md
docs/: SDK说明文档-linux-arm64-cpp.docx  SDK说明文档-linux-arm64-py.docx  SDK说明文档-linux-x86-py.docx
example/: CMakeLists.txt  test_connect_api.cpp  test_coord_tool_api.cpp  test_coord_transform_api.cpp  test_digital_io_api.cpp  test_error_callback_api.cpp  test_error_zero_api.cpp  test_global_position_api.cpp  test_info_query_api.cpp  test_job_control_api.cpp  test_log_download_api.cpp  test_modbus_api.cpp  test_move_control_api.cpp  test_queue_motion_api.cpp  test_servo_api.cpp  test_servoj_api.cpp  test_teach_control_api.cpp
example/cpp/: CMakeLists.txt  README.md  test_connect_api.cpp  test_coord_tool_api.cpp  test_coord_transform_api.cpp  test_digital_io_api.cpp  test_error_callback_api.cpp  test_error_zero_api.cpp  test_global_position_api.cpp  test_info_query_api.cpp  test_job_control_api.cpp  test_log_download_api.cpp  test_modbus_api.cpp  test_move_control_api.cpp  test_queue_motion_api.cpp  test_servo_api.cpp  test_servoj_api.cpp  test_six_axis_force_api.cpp  test_teach_control_api.cpp  test_teleop_f710_servoj.cpp
example/py/: README.md  test_connect_api.py  test_coord_tool_api.py  test_coord_transform_api.py  test_digital_io_api.py  test_error_callback_api.py  test_error_zero_api.py  test_global_position_api.py  test_info_query_api.py  test_job_control_api.py  test_log_download_api.py  test_modbus_api.py  test_move_control_api.py  test_queue_motion_api.py  test_servo_api.py  test_servoj_api.py  test_six_axis_force_api.py  test_teach_control_api.py  test_teleop_f710_servoj.py
include/c/interface/: tl_c_craft_pallet.h  tl_c_interface.h  tl_c_io.h  tl_c_job_operate.h  tl_c_queue_operate.h
include/c/parameter/: tl_define.h  tl_interface_parameter.h
include/cpp/interface/: tl_api.h  tl_craft_conveyor_belt_track.h  tl_craft_laser_cutting.h  tl_craft_pallet.h  tl_craft_track.h  tl_craft_vision.h  tl_craft_weld.h  tl_dual_arm.h  tl_interface.h  tl_io.h  tl_job_operate.h  tl_modbus.h  tl_queue_operate.h  tl_track.h  tl_vfd_ctr.h
include/cpp/parameter/: tl_craft_conveyor_belt_track_parameter.h  tl_craft_laser_cutting_parameter.h  tl_craft_track_parameter.h  tl_craft_vision_parameter.h  tl_craft_weld_parameter.h  tl_define.h  tl_interface_parameter.h  tl_io_parameter.h  tl_modbus_parameter.h  tl_parameter.h
lib/arm64/: tl_interface.py
lib/linux/arm64/python/: tl_interface.py
lib/linux/x86/python/: tl_interface.py
lib/windows/: tl_host.lib
lib/windows/python/: tl_interface.py
lib/x86/: tl_interface.py
